--- a/metaverse-codefest-dash/package.json
+++ b/metaverse-codefest-dash/package.json
@@ -3,16 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.2",
+    "@devexpress/dx-react-chart": "^2.7.6",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.6",
+    "@progress/kendo-react-charts": "^4.13.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "0.9.5",
+    "react-scripts": "2.1.5",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4"
+    "semantic-ui-react": "^2.0.4",
+    "yarn": "^1.22.17",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^3.7.0",
+    "react": "^16.8.3",
+    "react-chartjs-2": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
