--- a/metaverse-codefest-dash/package.json
+++ b/metaverse-codefest-dash/package.json
@@ -1,26 +1,57 @@
 {
   "name": "avatar-dashboard",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@devexpress/dx-react-chart": "^2.7.6",
-    "@devexpress/dx-react-chart-material-ui": "^2.7.6",
-    "@progress/kendo-react-charts": "^4.13.0",
+    "@semantic-ui-react/css-patch": "^1.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "axios-mock-adapter": "^1.20.0",
+    "chart.js": "^3.8.2",
+    "classnames": "^2.3.1",
+    "express": "^4.17.2",
+    "path": "^0.12.7",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
+    "react-core": "github:integralads/react-core#Vista_Hackathon",
     "react-dom": "^17.0.2",
-    "react-scripts": "2.1.5",
-    "semantic-ui-css": "^2.4.1",
+    "react-query": "^3.39.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.1",
+    "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
     "semantic-ui-react": "^2.0.4",
-    "yarn": "^1.22.17",
-    "bootstrap": "^4.3.1",
-    "chart.js": "^3.7.0",
-    "react": "^16.8.3",
-    "react-chartjs-2": "^4.0.0"
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "semantic-ui-css-patch"
+  },
+  "devDependencies": {
+    "@cypress/code-coverage": "^3.9.11",
+    "@cypress/instrument-cra": "^1.4.0",
+    "@types/express": "^4.17.13",
+    "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "cypress": "^8.3.1",
+    "dotenv": "^16.0.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "lint-staged": "^12.3.4",
+    "prettier": "2.3.2",
+    "sass": "^1.44.0",
+    "start-server-and-test": "^1.14.0"
   },
   "browserslist": [
     ">0.2%",
